Update CI, update dependencies