@@ -161,7 +161,7 @@
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.22.0</version>
+			<version>3.23.1</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- This will get hamcrest-core automatically -->
@@ -286,7 +286,7 @@
 		<dependency>
 			<groupId>io.netty.incubator</groupId>
 			<artifactId>netty-incubator-codec-native-quic</artifactId>
-			<version>0.0.26.Final</version>
+			<version>0.0.27.Final</version>
 			<classifier>linux-x86_64</classifier>
 			<exclusions>
 				<exclusion>
@@ -340,7 +340,7 @@
 		<dependency>
 			<groupId>io.projectreactor.netty.incubator</groupId>
 			<artifactId>reactor-netty-incubator-quic</artifactId>
-			<version>0.0.7</version>
+			<version>0.0.8</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.netty.incubator</groupId>
@@ -518,7 +518,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>3.0.0-M6</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
@@ -528,10 +528,6 @@
 				</dependencies>
 				<configuration>
 					<useModulePath>false</useModulePath>
-					<argLine>--add-modules jdk.incubator.foreign -Dforeign.restricted=permit
-            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.nio=ALL-UNNAMED --enable-native-access=ALL-UNNAMED
-          </argLine>
 					<systemProperties>
 						<property>
 							<name>ci</name>
